examples/test/testpolicy17899.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17899
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key16: value39
      key35: value14
      key15: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value25
          key36: value44
          key35: value3
